--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col d-flex flex-row">
-						<div class="phone">+38 097 940 36 96</div>
+						<!-- <div class="phone">+38 097 940 36 96</div> -->
 						<div class="social">
 							<ul class="social_list">
 								<li class="social_list_item"><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
