--- a/offers.html
+++ b/offers.html
@@ -448,6 +448,9 @@
 		<!-- Offers -->
 
 		<div class="container">
+			<div class="tours-list">
+				
+			</div>
 			<div class="row">
 				<div class="col-lg-1 temp_col"></div>
 				<div class="col-lg-11">
