--- a/offers.html
+++ b/offers.html
@@ -119,7 +119,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/about_background.jpg"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/Background/about_background.jpg"></div>
 		<div class="home_content">
 			<div class="home_title">our offers</div>
 		</div>
