--- a/offers.html
+++ b/offers.html
@@ -448,7 +448,7 @@
 		<!-- Offers -->
 
 		<div class="container">
-			<div class="tours-list">
+			<div class="tours-list" id="tours-list">
 				
 			</div>
 			<div class="row">
