--- a/contact.html
+++ b/contact.html
@@ -120,6 +120,7 @@
 
 	<div class="home">
 		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/contact_background.jpg"></div>
+		
 		<div class="home_content">
 			<div class="home_title">contact</div>
 		</div>
@@ -148,6 +149,9 @@
 			</div>
 		</div>
 	</div>
+
+	<div data-skyscanner-widget="SearchWidget"></div>
+	<script src="https://widgets.skyscanner.net/widget-server/js/loader.js" async></script>
 
 	<!-- About -->
 	<div class="about">
