--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<li class="main_nav_item"><a href="about.html">О нас</a></li>
 								<li class="main_nav_item"><a href="offers.html">Найти Тур</a></li>
 								<li class="main_nav_item"><a href="blog.html">Новости</a></li>
-								<li class="main_nav_item"><a href="contact.html">Контакты</a></li>
+								<li class="main_nav_item"><a href="flights.html">Авиабилеты</a></li>
 							</ul>
 						</div>
 						
