--- a/index.html
+++ b/index.html
@@ -846,6 +846,7 @@
 <script src="plugins/easing/easing.js"></script>
 <script src="js/custom.js"></script>
 <script type="text/javascript" src="https://spikmi.com/Widget?Id=3444"></script>
+<script charset="utf-8" type="text/javascript" src="http://addis-abeba.github.io/iframe.js"></script>
 
 </body>
 
