--- a/flights.html
+++ b/flights.html
@@ -6,6 +6,19 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Travelix Project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>Дешевые авиабилеты и отели</title>
+<meta name="description" content="Сравниваем цены с сотен сайтов и позволяем вам выбрать самый дешевый вариант перелета или лучшую цену на отель."/>
+<meta property="og:title" content="Поиск дешевых авиабилетов и отелей" />
+<meta property="og:description" content="Сравниваем цены с сотен сайтов и позволяем вам выбрать самый дешевый вариант перелета или лучшую цену на отель." />
+<meta content="ru_RU" property="og:locale">
+<meta content="product.item" property="og:type">
+<meta content="[:og_image:]" property="og:image">
+
+<meta content="Поиск дешевых авиабилетов и отелей" name="twitter:title">
+<meta content="Сравниваем цены с сотен сайтов и позволяем вам выбрать самый дешевый вариант перелета или лучшую цену на отель." name="twitter:description">
+<meta content="summary_large_image" name="twitter:card">
+
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="styles/contact_styles.css">
