--- a/flights.html
+++ b/flights.html
@@ -131,6 +131,22 @@
 	</div>
 
 	<!-- Home -->
+	<div class="TPWL-header-content">
+	  <div class="TPWL-header-content-wrapper">
+	    <div class="TPWL-header-content__logo">
+	      <a class="TPWL-header-content-logo-link" href="/">
+	        <span class="TPWL-header-content-logo__img"></span>
+	        <span class="TPWL-header-content-logo__text">easy travel</span>
+	      </a>
+	    </div>
+	    <div class="TPWL-header-content__descrition">
+	        Путешествуйте просто и выгодно!
+	    </div>
+	    <div class="TPWL-header-content__label">Поиск авиабилетов и отелей</div>
+	  </div>
+	</div>
+
+
 	<div class="TPWL-front-content">
 	  <div class="TPWL-front-content-weedle">
 	    <h2 class="TPWL-front-content-weedle-title">Популярные направления перелётов</h2>
