--- a/flights.html
+++ b/flights.html
@@ -146,7 +146,8 @@
 	  </div>
 	</div>
 
-
+	<iframe scrolling="no" width="" height="409" frameborder="0" src="//www.travelpayouts.com/widgets/e904a605c00889ca7102909278a446e6.html?v=2020"></iframe>
+	
 	<div class="TPWL-front-content">
 	  <div class="TPWL-front-content-weedle">
 	    <h2 class="TPWL-front-content-weedle-title">Популярные направления перелётов</h2>
