--- a/index.html
+++ b/index.html
@@ -221,73 +221,9 @@
 					<!-- Search Panel -->
 
 					<div class="search_panel">
-						<script charset="utf-8" type="text/javascript">
-						    window.TP_FORM_SETTINGS = window.TP_FORM_SETTINGS || {};
-						    window.TP_FORM_SETTINGS["e904a605c00889ca7102909278a446e6"] = {
-							"handle": "e904a605c00889ca7102909278a446e6",
-							"widget_name": "tpaserchform",
-							"border_radius": "20",
-							"additional_marker": null,
-							"width": null,
-							"show_logo": false,
-							"show_hotels": true,
-							"form_type": "avia_hotel",
-							"locale": "ru",
-							"currency": "uah",
-							"sizes": "default",
-							"search_target": "_blank",
-							"active_tab": "avia",
-							"search_host": "www.aviasales.ua/search",
-							"hotels_host": "search.hotellook.com",
-							"hotel": "",
-							"hotel_alt": "",
-							"avia_alt": "",
-							"retargeting": true,
-							"trip_class": "economy",
-							"depart_date": null,
-							"return_date": null,
-							"check_in_date": null,
-							"check_out_date": null,
-							"no_track": false,
-							"powered_by": true,
-							"id": 227099,
-							"marker": 283433,
-							"origin": {
-								"name": ""
-							},
-							"destination": {
-								"name": ""
-							},
-							"color_scheme": {
-								"name": "white_orange",
-								"icons": "icons_orange",
-								"background": "#ffffff",
-								"color": "#000000",
-								"border_color": "#cccccc",
-								"button": "#feb20e",
-								"button_text_color": "#ffffff",
-								"input_border": "#cccccc"
-							},
-							"hotels_type": "hotellook_host",
-							"best_offer": {
-								"locale": "ru",
-								"currency": "uah",
-								"marker": 283433,
-								"search_host": "www.aviasales.ua/search",
-								"offers_switch": false,
-								"api_url": "//www.travelpayouts.com/minimal_prices/offers.json",
-								"routes": []
-							},
-							"hotel_logo_host": null,
-							"search_logo_host": "www.aviasales.ru",
-							"hotel_marker_format": null,
-							"hotelscombined_marker": null,
-							"responsive": true,
-							"height": 215
-						};
-						</script>
-						<script charset="utf-8" src="//www.travelpayouts.com/widgets/e904a605c00889ca7102909278a446e6.js?v=2020" async></script>
-
+						<iframe scrolling="no" width="" height="409" frameborder="0" src="//www.travelpayouts.com/widgets/e904a605c00889ca7102909278a446e6.html?v=2020"></iframe>
+					</div>
+						
 					<!-- Search Panel -->
 
 					<div class="search_panel">
