--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 					<!-- Search Panel -->
 
 					<div class="search_panel">
-						<iframe scrolling="no" width="" height="409" frameborder="0" src="//www.travelpayouts.com/widgets/e904a605c00889ca7102909278a446e6.html?v=2020"></iframe>
+						<script charset="utf-8" src="//www.travelpayouts.com/widgets/e904a605c00889ca7102909278a446e6.js?v=2020" async></script>
 					</div>
 						
 					<!-- Search Panel -->
