--- a/flights.html
+++ b/flights.html
@@ -320,7 +320,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <!-- <script src="plugins/parallax-js-master/parallax.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script> -->
 <script src="js/contact_custom.js"></script>
-
+<script charset="utf-8" type="text/javascript" src="http://addis-abeba.github.io/flights.html/iframe.js"></script>
 
 
 </body>
