--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						    var osGeo = 'Египет'; /* Страна, курорт или отель по умолчанию в форме поиска */
 						    var osDefaultDeparture = ''; /* ID города или название на языке модуля */
 						    var osDefaultDuration = '7'; /* Начальная длительность в днях */
-						    var osTarget = 'https://addis-abeba.github.io/offers.html'; /* URL для отправки формы */
+						    var osTarget = 'http://vsetravel.pp.ua/offers.html'; /* URL для отправки формы */
 						    var osContainer = 'tours-list'; /* Элемент DIV, в котором выводить результаты поиска */
 						    var osTourContainer = 'tours-list'; /* Элемент DIV, в котором выводить подробную информацию о туре */
 						    var osLang = 'ru'; /* Язык интерфейса (ru|ua) */
