--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 					<div class="search_panel active">
 						<script>
-						    var osGeo = 'Египет'; /* Страна, курорт или отель по умолчанию в форме поиска */
+						    var osGeo = ''; /* Страна, курорт или отель по умолчанию в форме поиска */
 						    var osDefaultDeparture = ''; /* ID города или название на языке модуля */
 						    var osDefaultDuration = '7'; /* Начальная длительность в днях */
 						    var osTarget = 'http://vsetravel.pp.ua/offers.html'; /* URL для отправки формы */
